# envy

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cursor/rules/: baby-steps.mdc
.github/workflows/: ci.yml
src/: main.rs
